--- a/sample/app/src/main/res/layout/simple_activity.xml
+++ b/sample/app/src/main/res/layout/simple_activity.xml
@@ -2,18 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     android:orientation="vertical"
     android:padding="8dp">
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="50sp" />
-
-    <TextView
-        android:id="@+id/subtitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -23,15 +17,8 @@
         android:id="@+id/hello"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_margin="10dp" />
-
-    <TextView
-        android:id="@+id/footer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="17sp"
-        android:textStyle="italic" />
+        android:layout_margin="10dp"
+        android:text="Add_Fragment" />
 
     <include
         android:id="@+id/commonlayout1"
@@ -41,11 +28,4 @@
         android:id="@+id/commonlayout2"
         layout="@layout/common_layout" />
 
-    <FrameLayout
-        android:id="@+id/slide_fragment"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-
-    </FrameLayout>
 </LinearLayout>
