--- a/app/src/main/res/layout/simple_activity.xml
+++ b/app/src/main/res/layout/simple_activity.xml
@@ -2,30 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
-    android:orientation="vertical"
-    android:padding="8dp">
-
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="20sp" />
+    android:background="#000"
+    android:padding="20dp"
+    android:orientation="vertical">
 
     <Button
-        android:id="@+id/hello"
+        android:id="@+id/btn"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_margin="10dp"
-        android:text="Add_Fragment" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textAllCaps="false"
+        android:textSize="26sp" />
 
     <include
         android:id="@+id/commonlayout1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         layout="@layout/common_layout" />
 
     <include
         android:id="@+id/commonlayout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         layout="@layout/common_layout" />
 
 </LinearLayout>
